# TE-B-Mini-Project-2B-2025-26

./: FINAL REPORT_sign language_grp8.docx  Group no 8 Sign language detection final_pred.py  Miniproject_signLanguage_review1.pptx (1).ppt  test_admin_function.sql
CODE/: complete-email-backend.js
CODE/src/: App.tsx
DataPrepX/backend/: Dockerfile  app.py  requirements.txt  test_gcs.py
DataPrepX/frontend/: Dockerfile  firebase.json  nginx.conf  package-lock.json  package.json  patch_app.py  postcss.config.js  tailwind.config.js
Group 11 Airbus ship detection/: airbus ship code drive link.txt
Group No. 1 - CogniSense/CODE/: README.md
Group No. 13 - NewsRankAI/: NewsRankAI.pptx
Group No. 13 - NewsRankAI/NewsRankAI/: app.py  main.py  new_dataset.csv
Group No. 14 - NIDS/: MINI PROJECT REVIEW2.pptx  Netsecure_GanttChart.xlsx
Group No. 14 - NIDS/Codes and datasets/: create_dataset.py  network_dataset.csv  realtime_detection.py
Group-3 - PlacementPal/: PROJECT_IMPLEMENTATION.md
Group-3 - PlacementPal/CODE/: complete-email-backend.js  email-server.js  (+3 more)
Group-3-review-lens/: readme.md
Group-3-review-lens/backend/: .gitignore  README.md  pyproject.toml  run.py
Group-3-review-lens/backend/app/: ai_client.py  main.py  routers.py  schemas.py
Group-3-review-lens/backend/ml/: __init__.py  model_comparison.py  pipeline.py
Group-3-review-lens/backend/tests/: test_app.py
Group-3-review-lens/backend/utils/: generate_dataset.py
Group12 - Planora/: Gantt_chart.xlsx
Group_No. 4 - DataPrepX/: DataPrepX_Gantt.xlsx
services/: llm.js  rag.js  resource_finder.js
(+106 files in other folders)
