[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.134.0",
    "numpy>=2.2.6",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "typing>=3.10.0.0",
    "uvicorn>=0.41.0",
]
